--- a/Voting.html
+++ b/Voting.html
@@ -5,13 +5,13 @@
 <html>
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
-	<title>Maticsky - Official Website</title>
-	<meta name="description" content="Maticsky is a new and awesome Minecraft server. You can join with the IP 'play.Maticsky.net'.">
+	<title>Maticsky - Voting</title>
+	<meta name="description" content="Maticsky is a new and awesome Minecraft server. You can join with the IP 'Maticsky.net'.">
 	<meta property="og:title" content="Maticsky - Official Voting Portal">
 	<meta property="og:site_name" content="Maticsky">
-	<meta property="og:description" content="Maticsky is a new and awesome Minecraft server. You can join with the IP 'play.Maticsky.net'.">
-	<meta property="og:image" content="https://bybilly.uk/portal/img/minecraft.jpg">
-	<meta property="og:url" content="https://bybilly.uk/">
+	<meta property="og:description" content="Maticsky is a new and awesome Minecraft server. You can join with the IP 'Maticsky.club'.">
+	<meta property="og:image" content="https://media.discordapp.net/attachments/649686092995624960/1080570386103676948/2023-02-16_17.14.12.png?width=1277&height=683">
+	<meta property="og:url" content="https://media.discordapp.net/">
 	<meta name="twitter:card" content="summary_large_image">
 
 	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
