--- a/Voting.html
+++ b/Voting.html
@@ -6,10 +6,10 @@
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
 	<title>Maticsky - Voting</title>
-	<meta name="description" content="Maticsky is a new and awesome Minecraft server. You can join with the IP 'Maticsky.net'.">
+	<meta name="description" content="Maticsky is a new upcoming Minecraft server. You can join with the IP 'Maticsky.net'.">
 	<meta property="og:title" content="Maticsky - Official Voting Portal">
 	<meta property="og:site_name" content="Maticsky">
-	<meta property="og:description" content="Maticsky is a new and awesome Minecraft server. You can join with the IP 'Maticsky.club'.">
+	<meta property="og:description" content="Maticsky is a new upcoming Minecraft server. You can join with the IP 'Maticsky.club'.">
 	<meta property="og:image" content="https://media.discordapp.net/attachments/649686092995624960/1080570386103676948/2023-02-16_17.14.12.png?width=1277&height=683">
 	<meta property="og:url" content="https://media.discordapp.net/">
 	<meta name="twitter:card" content="summary_large_image">
