Fixed spelling errors

--- a/Voting.html
+++ b/Voting.html
@@ -1,5 +1,8 @@
-<!-- Proudly coded by Billy (https://bybilly.uk) -->
-<!-- Version: 1.9.2 -->
+<!--
+- Joelmatic: https://github.com/TheRealJoelmatic
+ - Denies
+ - ByBilly: https://bybilly.uk/ 
+-->
 
 <!DOCTYPE html>
 <html>
@@ -36,7 +39,7 @@
 				<a href="#" class="item store">
 				<div>
 					<img src="img/blocks/Grass.png" alt="Minecraft voting icon" class="img">
-					<p class="subtitle">CommingSoon.com</p>
+					<p class="subtitle">ComingSoon.com</p>
 					<p class="title">Vote Link 1</p>
 				</div>
 				</a>
@@ -44,7 +47,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/Dirt.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 2</p>
 					</div>
 				</a>
@@ -52,7 +55,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/Gravel.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 3</p>
 					</div>
 				</a>
@@ -60,7 +63,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/Piedra v2.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 4</p>
 					</div>
 				</a>
@@ -68,7 +71,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/White Bedorck.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 5</p>
 					</div>
 				</a>
@@ -81,7 +84,7 @@
 				<a href="#" class="item store">
 				<div>
 					<img src="img/blocks/Wood.png" alt="Minecraft voting icon" class="img">
-					<p class="subtitle">CommingSoon.com</p>
+					<p class="subtitle">ComingSoon.com</p>
 					<p class="title">Vote Link 6</p>
 				</div>
 				</a>
@@ -89,7 +92,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/Cactus.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 7</p>
 					</div>
 				</a>
@@ -97,7 +100,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/New Lapiz.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 8</p>
 					</div>
 				</a>
@@ -105,7 +108,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/New Obsidian.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 9</p>
 					</div>
 				</a>
@@ -113,7 +116,7 @@
 				<a href="#" class="item store">
 					<div>
 						<img src="img/blocks/Obsidian.png" alt="Minecraft voting icon" class="img">
-						<p class="subtitle">CommingSoon.com</p>
+						<p class="subtitle">ComingSoon.com</p>
 						<p class="title">Vote Link 10</p>
 					</div>
 				</a>
