--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!-- Proudly coded by Billy (https://bybilly.uk) -->
-<!-- Version: 1.9.2 -->
+<!--
+- Joelmatic: https://github.com/TheRealJoelmatic
+ - Denies
+ - ByBilly: https://bybilly.uk/ 
+-->
 
 <!DOCTYPE html>
 <html>
