--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 <html>
 <head>
 	<!-- Info meta tags, important for social media + SEO -->
-	<title>Maticsky - Official Website</title>
-	<meta name="description" content="Maticsky is a new upcoming Minecraft server. You can join with the IP 'Maticsky.club'.">
-	<meta property="og:title" content="Maticsky - Official Website Portal">
-	<meta property="og:site_name" content="Maticsky">
-	<meta property="og:description" content="Maticsky is a new upcoming Minecraft server. You can join with the IP 'Maticsky.club'.">
-	<meta property="og:image" content="https://media.discordapp.net/attachments/649686092995624960/1080570386103676948/2023-02-16_17.14.12.png?width=1277&height=683">
-	<meta property="og:url" content="https://media.discordapp.net/">
-	<meta name="twitter:card" content="summary_large_image">
+	<title>Maedow</title>
+	<meta name="description" content="Tại sao bạn lại search lên vậy?">
+	<meta property="og:title" content="Maedow - Official Website Portal">
+	<meta property="og:site_name" content="Maedow">
+	<meta property="og:description" content="Meow">
 
 	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,40 +27,23 @@
 		<div class="logo">
 			<!-- In the img folder, upload your logo -->
 			<!-- Make sure you name it 'logo.png' or update the code below -->
-			<img src="img/logo.png" alt="Maticsky logo">
+			<img src="img/logo.png" alt="Maedow logo">
 		</div>
 
 		<div class="items">
 
-			<a href="https://discord.gg/8YxgkpKDve" class="item forums">
+			<a href="https://discord.gg/ATyJKZEX9b" class="item forums">
 				<div>
 					<img src="img/discord.png" alt="Minecraft discord icon" class="img">
-					<p class="subtitle">Hang out on our</p>
+					<p class="subtitle">Join discord của chúng tối!</p>
 					<p class="title">Discord</p>
-				</div>
-			</a>
-
-			<a href="https://maticsky.craftingstore.net/" class="item store">
-			<div>
-				<img src="img/store.png" alt="Minecraft store icon" class="img">
-				<p class="subtitle">donate on our</p>
-				<p class="title">Store</p>
-			</div>
-			</a>
-
-			<a href="Voting.html" class="item vote">
-			<div>
-				<img src="img/vote.png" alt="Minecraft voting icon" class="img">
-				<p class="subtitle">support us by</p>
-				<p class="title">Voting</p>
-			</div>
-			</a>
+                                <div>
 
 		</div>
 
 		<div class="playercount">
-			<p>Join <span class="sip" data-ip="Maticsky.club" data-port="25565">
-			</span> other players on <span class="ip">Maticsky.club</span></p>
+			<p>Vào <span class="sip" data-ip="maedow.fun" data-port="25565">
+			</span> với nhiều người khác <span class="ip">maedow.fun</span></p>
 		</div>
 	</div>
 
@@ -72,3 +52,4 @@
 	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
+
