--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
                                 <div>
 
 		</div>
-
-		<div class="playercount">
-			<p>Vào <span class="sip" data-ip="maedow.fun" data-port="25565">
-			</span> với nhiều người khác <span class="ip">maedow.fun</span></p>
-		</div>
+<audio controls autoplay>
+  <source src="chill.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -52,4 +51,5 @@
 	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
+
 
