--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		</div>
 <audio controls autoplay>
-  <source src="chill.mp3" type="audio/mpeg">
+  <source src="img/chill.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 	</div>
@@ -51,5 +51,6 @@ Your browser does not support the audio element.
 	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
+
 
 
