--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <div>
 
 		</div>
-<audio controls autoplay>
+<audio autoplay>
   <source src="img/chill.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
@@ -51,6 +51,7 @@ Your browser does not support the audio element.
 	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
+
 
 
 
