--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                                 <div>
 
 		</div>
-<audio autoplay>
-  <source src="img/chill.mp3" type="audio/mpeg">
+<audio controls autoplay>
+  <source src="img/chill.mp3" type="audio/mp3">
 Your browser does not support the audio element.
 </audio>
 	</div>
@@ -51,6 +51,7 @@ Your browser does not support the audio element.
 	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
+
 
 
 
