--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                                 <div>
 
 		</div>
-    <audio src="/img/chill.mp3" controls autoplay>
-	</audio>
+    <<embed name="Eleric" src="/img/chill.mp3" loop="false" hidden="true" autostart="true">
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -49,6 +48,7 @@
 	<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
+
 
 
 
